# openhammons-hi3861-experiments

./: .gitignore  LICENSE  README.md  config_template.h
Lab1/: BUILD.gn  README.md
Lab1/task1_hello/: hello_world.c
Lab1/task2_msgqueue/: msg_queue_demo.c
Lab2/: README.md
Lab2/environment/: BUILD.gn  aht20.c  aht20.h  envrionment_demo.c  oled_ssd1306.c  oled_ssd1306.h
Lab2/i2caht20/test/: BUILD.gn  aht20_test.c
Lab2/key_demo/: BUILD.gn
Lab3/: README.md
Lab3/pc_tool/: 使用说明.md
Lab3/tcp_client/: BUILD.gn  tcp_client.c
Lab3/udp_server/: BUILD.gn  udp_server.c
Lab4/: README.md  mosquitto.conf
Lab4/key_demo/: BUILD.gn  key_demo.c
Lab4/mqtt_local/: BUILD.gn  mqtt_local.c
Lab4/mqtt_test/: BUILD.gn  mqtt_entry.c  mqtt_test.c
Lab4/smart_home/: BUILD.gn  smart_home.c
Lab5/: README.md
Lab5/mqtt_gas_sensor/: BUILD.gn  gas_sensor.c  gas_sensor.h  main.c  main_v2_smart_scene.c
Lab6/iot-llm/: app.py  check_config.py  config.py  iotda_handler.py  llm_handler.py  requirements.txt
Lab6/iot-llm/templates/: index.html
Lab6/mqtt_gas_sensor_llm/: BUILD.gn  aht20.c  aht20.h  main.c  output_control.c  output_control.h  sensor.c  sensor.h
docs/: 环境搭建指南.md
report/: 实验报告.md
tools/: web_control_panel.py
