# Lab2 任务二: 多模式环境监测系统 BUILD.gn

static_library("environment") {
    sources = [
        "envrionment_demo.c",
        "oled_ssd1306.c",
        "aht20.c",
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//base/iothardware/peripheral/interfaces/inner_api",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
        "//commonlibrary/utils_lite/include",
    ]
}
