# Lab3 - UDP 服务器 BUILD.gn
# 依赖: hi_wifi (WiFi 协议栈), lwip (TCP/IP 协议栈)

static_library("udp_server") {
    sources = [
        "udp_server.c"
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/lwip_sack/include",
    ]

    deps = [
        "//device/soc/hisilicon/hi3861v100/sdk_liteos:hi_wifi",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos:lwip",
    ]
}
