# Lab4 - 按键实验 BUILD.gn

static_library("key_demo") {
    sources = [
        "key_demo.c"
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/lwip_sack/include",
    ]

    deps = [
        "//device/soc/hisilicon/hi3861v100/sdk_liteos:hi_adc",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos:hi_io",
    ]
}
