# Lab6 - AIoT Gas Sensor + Temp/Humi + LED + Buzzer

static_library("mqtt_gas_sensor") {
    sources = [
        "main.c",
        "sensor.c",
        "aht20.c",
        "output_control.c",
    ]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//base/iothardware/peripheral/interfaces/inner_api",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal",
        "//third_party/cJSON",
        "//applications/sample/wifi-iot/library/third_party/paho_mqtt/MQTTPacket/src",
        "//applications/sample/wifi-iot/library/third_party/paho_mqtt/MQTTClient-C/src",
        "//applications/sample/wifi-iot/library/third_party/paho_mqtt/MQTTClient-C/src/liteOS",
        "//applications/sample/wifi-iot/library/easy_wifi",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
    ]
    deps = [
        "//applications/sample/wifi-iot/library/third_party/paho_mqtt/:pahomqtt_static",
        "//third_party/cJSON:cJSON",
        "//applications/sample/wifi-iot/library/easy_wifi:easy_wifi",
    ]
}
